2004-04-18  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: bumped the version info 3.0.1 
	and version number to 0.5.1
	
2004-04-17  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-parser.c: 
	(cr_parser_parse_stylesheet):
	Correctly detect @import run parsing errors.
	This fixes http://bugzilla.gnome.org/show_bug.cgi?id=140334 .
	
	* src/cr-parser.c: 
	(cr_parser_parse_simple_selector):
	correctly detect when class additional selector parsing
	fails.
	(cr_parser_parse_simple_sels):
	Make sure a pointer is not null before derefencing it.
	append a simple sel to the list of simple sels only if 
	the simple sel is not NULL.
	This entry fixes http://bugzilla.gnome.org/show_bug.cgi?id=140317
	.	

	* src/cr-statement.[ch]:
	(cr_statement_list_to_string):
	added this to "to_string" a list of statements.
	(cr_statement_media_rule_to_string): dump the 
	*list of statements* contained in the media rule, and
	not only the first one.
	This entry fixes http://bugzilla.gnome.org/show_bug.cgi?id=139891 .
	* tests/*: added the test-several-media.sh regression test.

	* src/cr-om-parser.c: 
	(end_media): set the "current statement" and
	"current media statement" context variable to NULL
	at the end a media statement.
	This fixes http://bugzilla.gnome.org/show_bug.cgi?id=139889 .

2004-04-16  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-num.c: 
	remove the '...' construction. This fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=138267.
	
2004-04-10  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-parser.c: 
	(cr_parser_parse_atrule_core):
	Make sure to return an error code when parsing fail.
	This should fix http://bugzilla.gnome.org/show_bug.cgi?id=139615.
	This fix keeps abi compatibility with libcroco 0.5.

2004-03-16  Dodji  <dodji@gnome.org>
 
 	* ==================== 0.5 release ====================
 	
2004-03-16  Dodji  <dodji@gnome.org>

	* croco-config.in: fixed this to include libxml2 and glib
	into cflags and libs.